# Durman-Desktop

./: .gitignore  README.md  angular.json  latest.json  package-lock.json  package.json  tsconfig.spec.json
.github/workflows/: release.yml
src/: index.html  karma.conf.js
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: lib.rs  main.rs
src/app/: app.component.css  app.component.html  app.component.ts
src/interfaces/data/: PasswordValidationResult.inerface.ts  appSettings.interface.ts  category.interface.ts  hint.interface.ts  loginValidation.interface.ts  passwordEntry.interface.ts  passwordGenerateOptions.interface.ts  passwordManagerState.interface.ts  passwordManagerStats.ts  passwordsInfo.interface.ts  reportCard.interface.ts  twoFA.interface.ts  userData.interface.ts
src/services/: appdata.service.ts  report.service.ts  validate.service.ts  window.service.ts
src/services/canvas/: canvas-graph.service.ts
src/services/category/: category-local.service.ts
src/services/crypto/: crypto-aes-gcm.service.ts  crypto-file.service.ts  media-encryption.service.ts
src/services/filesystem/: dialog.service.ts
src/services/hash/: hash.service.ts
src/services/import/: browser-password.service.ts
src/services/json/: json-parser.service.ts
src/services/kanban/: kanban.service.ts
src/services/modals/: confirm-modal.service.ts
src/services/notification/: toast.service.ts
src/services/pie/: pie-graph.service.ts
src/utils/: clipboard.utils.ts  crypto.utils.ts  http.utils.ts  overflow.utils.ts
(+254 files in other folders)
